RESOLVED FIXED203659
[iOS] imported/mozilla/svg/text/textpath-selection.svg is still flaky
https://bugs.webkit.org/show_bug.cgi?id=203659
Summary [iOS] imported/mozilla/svg/text/textpath-selection.svg is still flaky
Wenson Hsieh
Reported 2019-10-30 20:40:03 PDT
Attachments
Patch (3.59 KB, patch)
2019-10-30 21:48 PDT, Wenson Hsieh
thorton: review+
Wenson Hsieh
Comment 1 2019-10-30 21:48:10 PDT
Tim Horton
Comment 2 2019-10-31 10:36:10 PDT
Comment on attachment 382423 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382423&action=review > Tools/ChangeLog:10 > + sometimes showing up in the actual result and not in the expectation. This still happens even after suppressing Grammar
Wenson Hsieh
Comment 3 2019-10-31 10:37:21 PDT
Comment on attachment 382423 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382423&action=review >> Tools/ChangeLog:10 >> + sometimes showing up in the actual result and not in the expectation. This still happens even after suppressing > > Grammar Oops, fixed!
Wenson Hsieh
Comment 4 2019-10-31 10:40:21 PDT
Note You need to log in before you can comment on or make changes to this bug.